# cloudtrim

./: .env.example  .gitignore  CONVENTIONS.md  Makefile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: Dockerfile
apps/api/api/: jobs.py  main.py  observability.py  report.py  sample_data.py  security.py  settings.py  store.py
apps/api/api/db/: __init__.py  models.py  repository.py  session.py
apps/api/api/github/: __init__.py  client.py  handler.py  signature.py
apps/api/api/v1/: analyses.py  github.py  router.py  schemas.py
apps/api/tests/: test_analyses_api.py  test_e2e.py  test_github.py  test_healthz.py  test_jobs.py  test_observability.py  test_report_api.py  test_repository.py  test_sample_api.py  test_security.py
apps/web/: package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/analyses/[id]/: page.tsx
apps/web/app/components/: badges.tsx  charts.tsx  diff.tsx
apps/web/app/lib/: api.ts
apps/web/app/trends/: page.tsx
apps/worker/: Dockerfile
apps/worker/worker/: __init__.py  jobs.py
docs/: BLUEPRINT.md  CloudTrim_Engineering_Blueprint.md  _removed_build_notes.md  api.md  architecture.md  eval.md  github-app.md  openapi.json  operations.md
docs/adr/: 0001-deterministic-core-llm-explains.md  0002-pricing-snapshot-query-api.md
eval/: run_eval.py
eval/fixtures/clean/: costs.csv  main.tf
eval/fixtures/demo/: costs.csv  main.tf
eval/fixtures/fleet/: costs.csv  main.tf
eval/ground_truth/: clean.json  demo.json  fleet.json
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: build_pricing_snapshot.py  export_openapi.py  seed_demo.py
